2004-10-14 Derek Price <derek@ximbiot.com>

	* import.c (import): Verify branch specifications more thoroughly.
	* sanity.sh (importb): Adapt to new error message.
	(import-quirks): New test.

2004-10-04 Derek Price <derek@ximbiot.com>

	* cvs.h (CVSROOT_DFLT): Undef rather than defining to NULL.
	* main.c (main): Untangle parsing of CVSROOT, eliminating several
	variables in the process.  Simplify xmalloc/sprintf with asnprintf.

2004-10-01  Mark D. Baushke  <mdb@cvshome.org>

	* main.c (main): Initialize CVSroot before it is used.
	(Report and patch by Martin Neitzel <neitzel@sco.gaertner.de>.)
	* sanity.sh (status): Test it.

2004-09-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (parseroot2): Correct two test names.  Restore CVSROOT.

	* sanity.sh (parseroot2): Expand dokeep inline.

2004-09-24  Derek Price <derek@ximbiot.com>

	* sanity.sh (tests): Add parseroot2.

2004-09-24  Derek Price <derek@ximbiot.com>

	* sanity.sh (parseroot2): New test for root parsing consistency.
	(Original patch from Alexander Taler <dissent@cvshome.org>.)

	* cvs.h (Name_Root, free_cvsroot_t, parse_cvsroot, local_cvsroot,
	Create_Root, root_allow_add, root_allow_free, root_allow_ok): Move
	these protos to...
	* root.h: ...here.
	* client.c (arg_should_not_be_sent_to_server), recurse.c
	(start_recusrion, do_recursion): Use new Name_Root API.
	* main.c (current_root): Remove global.
	(set_root_directory): Set current_parsed_root directly.
	(main): Use new Name_Root API.  Restore deletion of root directories
	list.
	* root.c (Name_Root): Return a parsed cvsroot_t rather than a string.

2004-09-23  Derek Price <derek@ximbiot.com>

	* sanity.sh (depends_on_ssh, sshstdio): Don't use skip() to skip
	remote-only tests.

2004-09-23  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (cvs_output, cvs_output_binary): fflush (stderr)
	here to avoid problems with 'cvs status 2>&1'.
	(Report by Frank Hemer <frank@hemer.org>.)

2004-09-23  Derek Price <derek@ximbiot.com>
