@@ -1,3 +1,9 @@
+2004-10-19 Derek Price <derek@ximbiot.com>
+
+	* add.c (add): Avoid attempting to resurrect a dead rev 1.1.
+	* sanity.sh (resurrection): Add test for the above.
+	(Report from Dan Peterson <dbpete@aol.com>.)
+
 2004-10-14 Derek Price <derek@ximbiot.com>
 
 	* import.c (import): Verify branch specifications more thoroughly.
